--- a/_config.yml
+++ b/_config.yml
@@ -9,15 +9,15 @@ Yelee: "3.5"
 menu:
   主页: /
   所有文章: /archives/
-  #随笔: /tags/随笔
+  随笔: /tags/随笔
   标签云: /tags/
-  关于我: /about/
+  #关于我: /about/
 
 # Link to your avatar | 填写头像地址
-avatar: /img/avatar.png
+avatar: /assets/images/blog-img/avatar.jpg
 
 # Small icon of Your site | 站点小图标地址
-favicon: /favicon.png
+favicon: /assets/images/blog-img/favicon.png
 
 # Internationalization | 主题语言
 ## Change Language in SITE's _config.yml | 在站点配置中切换语言
@@ -28,7 +28,7 @@ favicon: /favicon.png
 ## If your site' url is 'http://yoursite.com/blog', set root_url as '/blog/'
 ## 网站若存放在子目录，请按上面格式填写
 ## https://hexo.io/docs/configuration.html#URL
-root_url: 
+root_url:
 
 # Year of Site Creation | 网站成立年份
 since: 2016
@@ -40,9 +40,13 @@ since: 2016
 ## https://github.com/hexojs/hexo-generator-feed
 
 subnav:
-  Email: "mailto:123@123.com"
+  GitHub: "https://github.com/allenn"
+  新浪微博: "http://weibo.com/allenzheng1225"
+  Email: "mailto:&#120;&#117;&#100;&#111;&#110;&#103;&#122;&#104;&#101;&#110;&#103;&#49;&#50;&#50;&#53;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;?Subject=Hello"
+  Facebook: "https://www.facebook.com/allencheng1225"
+  Twitter: "https://twitter.com/xudongzheng1225"
+  #linkedin: "#"
   #新浪微博: "sina weibo"
-  GitHub: "#"
   #V2EX: "#"
   RSS: "/atom.xml"
   #知乎: "zhihu"
@@ -89,23 +93,23 @@ show_count: false
 ## 是否在主页文章标题旁显示评论数（多说、Disqus）
 ## Add comment count after article title
 
-disqus: 
+disqus:
   #on: true
-  shortname: 
+  shortname:
   # https://help.disqus.com/customer/en/portal/articles/466208-what-s-a-shortname-
-  # It is unnecessary to enable disqus here if 
-  # you have set "disqus_shortname" in your site's "_config.yml" 
+  # It is unnecessary to enable disqus here if
+  # you have set "disqus_shortname" in your site's "_config.yml"
 
-duoshuo: 
-  #on: true
-  domain: 
+duoshuo:
+  on: true
+  domain: alleeen
   # 是否开启多说评论，http://duoshuo.com/create-site/
   # 使用上面网址登陆你的多说，然后创建站点，在 domain 中填入你设定的域名前半部分
   # http://<要填的部分>.duoshuo.com (domain只填上<>里的内容，不要填整个网址)
 
 youyan:
   #on: true
-  id: 
+  id:
   # 是否开启友言评论，http://www.uyan.cc/index.php
   # id 中填写你的友言用户数字ID，注册后进入后台管理即可查看
   # 友言服务在 Web 环境下运行，普通本地环境无法查看，请部署后在线上测试。
@@ -117,19 +121,19 @@ youyan:
 ## "5": show images form bg-1.jpg to bg-5.jpg in `/yelee/source/background/`
 ## "5": 显示`/yelee/source/background/`文件夹中 bg-1.jpg 到 bg-5.jpg 这5张图片
 ## "0": white-gray background | 淳朴灰白背景
-background_image: 5
+background_image: 0
 
 # Base Font Size | 字号调节
 base_font_size: 16  #px, 16 - 24
 
-## General Color Scheme | 主题配色方案 
+## General Color Scheme | 主题配色方案
 ## 可用值 Value: yilia
-color_scheme: 
+color_scheme: yilia
 
 highlight_style:
   #on: true
   inline_code: 1  # Value: 0 - 9 可选
-  code_block: 1  # Value: 0 - 4 
+  code_block: 1  # Value: 0 - 4
   # Set inline_code to style highlight text
   # Chose a highlight theme for code block
   # 通过 inline_code 切换内置文本高亮样式
@@ -162,14 +166,14 @@ toc:
 
 # 是否开启主页及加载头像时的动画效果
 # Animation in Homepage and Loading avatar
-animate: true
+animate: false
 
 # Load jQuery UI to style tooltips
 # 工具提示框样式美化
 jquery_ui: false
 
-# Max width of right cloumn | 限制右侧内容的宽带 
-limit_article_width: 
+# Max width of right cloumn | 限制右侧内容的宽带
+limit_article_width:
   on: false
   max_width: 60 # em
 
@@ -182,12 +186,12 @@ tagcloud: true
 # Blogroll, Link exchange | 友情链接
 friends:
   Hexo: https://hexo.io
-  GitHub: https://pages.github.com/
-  MOxFIVE: http://moxfive.xyz/
+  GitHub: https://github.com/
+  并发编程网: http://ifeve.com/
 #friends: false
 
 #是否开启“关于我”。
-aboutme: 专注于前端
+aboutme: 讲真，没想好写点什么
 #aboutme: false
 
 # Open link in a new tab | 是否在新窗口打开链接
@@ -218,7 +222,7 @@ ie_updater:
   ## http://outdatedbrowser.com/
 
 # Tab Title Change | 标签页标题切换
-tab_title_change: 
+tab_title_change:
   on: false
   left_tab_title: '(つェ⊂) 我藏好了哦~ '
   return_tab_title: '(*´∇｀*) 被你发现啦~ '
@@ -229,7 +233,7 @@ tab_title_change:
 # Local Site Search | 本地站内搜索
 ## Insatall below plugin to take effect | 使用搜索需先安装对应插件
 ## https://github.com/PaicHyperionDev/hexo-generator-search
-search: 
+search:
   #on: true
   onload: false
   ## true: get search.xml file when the page has loaded
@@ -244,7 +248,7 @@ fancybox: true
 mathjax: false
 
 # Socail Share | 是否开启分享
-share: 
+share:
   on: true
   baidu: true
   addthis: false
@@ -254,15 +258,15 @@ share:
 
 # 百度、谷歌站长验证。填写 HTML 标签 content
 # Site Verification for Google and Baidu. HTML label content.
-baidu_site: 
-google_site: 
+baidu_site:
+google_site:
 
 # Fill in Google Analytics tracking ID, #e.g. UA-XXXXX-X
-google_analytics: 
+google_analytics: UA-36907890-1
 
 # 百度统计 http://sitecenter.baidu.com/sc-web/
 # 查看代码，填入 //hm.baidu.com/hm.js? 之后的内容
-baidu_tongji: 
+baidu_tongji: 2ef044f665c8137864db5a2f0321c0f1
 
 # 不蒜子网站计数设置
 # http://ibruce.info/2015/04/04/busuanzi/
